--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
         </div>
       </div>
     </footer>
-    <p>Islom</p>
+    <p>Islomchange</p>
     <p>master</p>
     <p>islom1</p>
     <p>master1change</p>
