--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
           </div>
         </div>
         <div class="d-flex align-items-center justify-content-between">
-          <a href=""><img src="" alt="" /></a>
+          <a href=""><img src="" alt="123" /></a>
           <p></p>
         </div>
       </div>
